frontend/src/components/Header/styles.scss
.headerContainer {
  flex-shrink: 0;
  height: 50px;
  width: 100%;
  background: #242424;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  .headerContent {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
    padding: 0 1rem;

    h1 {
      font-size: medium;
    }
  }

  .searchContainer {
    margin-left: 0;

    @media screen and (min-width: 768px) {
      margin-left: 100px;
    }

    .search {
      background: white;
      color: black;

      @media screen and (min-width: 768px) {
        width: calc(100vw - 400px);
      }
    }
  }

  .headerToggleThemeButton {
    margin: 0 1rem;
    cursor: pointer;
  }
}

.dark {
  background: #242424;
}

.light {
  background: #f5f5f5;

  p {
    color: black;
  }
}

